@startuml タスク管理アプリ

package database <<Database>> {
    entity "users" as users {
        * id: varchar(50)
        --
        * name: varchar(50)
        * password: varchar(64) SHA256のハッシュ値
        * created_at: timestamp
        * updated_at: timestamp
    }

    entity "categories" as categories {
        * id: char(36) UUID
        --
        * name: varchar(50)
        * created_at: timestamp
        * updated_at: timestamp
    }

    entity "items" as items {
        * id: char(36) UUID
        --
        * name: varchar(100)
        * description: varchar(1000)
        * acquisition_date: date
        * borrower_id: varchar(30) default null <<FK>>
        * location: varchar(100)
        * created_at: timestamp
        * updated_at: timestamp
    }

    entity "categorizations" as categorizations {
        * item_id: char(36) <<FK>>
        * category_id: char(36) <<FK>>
        --
    }
}

' relationships
categories ||--o{ categorizations
items ||--o{ categorizations
users ||--o{ items

@enduml